--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: palegoldenrod;
 }
 .App-link {
   color: #61DAFB;
@@ -44,6 +44,13 @@
   text-align: center;
   padding: 30px;
   background-color: floralwhite;
+}
+
+.todoo {
+  align-items: center;
+  display: flex;
+  font-size: 18px;
+  justify-content: space-between;
 }
 
 
